--- a/app/src/main/res/layout/question_dialog.xml
+++ b/app/src/main/res/layout/question_dialog.xml
@@ -3,46 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/dialog_round"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/icon_QA"
-                    android:layout_marginTop="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@mipmap/ic_launcher"/>
-                <TextView
-                    android:padding="10dp"
-                    android:layout_gravity="center"
-                    android:id="@+id/message_QA"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:text="Message"/>
-            </LinearLayout>
-            <LinearLayout
-                android:padding="10dp"
+    <LinearLayout
+                android:padding="15dp"
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:layout_marginStart="5dp"
+                    android:padding="5dp"
+                    android:id="@+id/message_QA"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="17dp"
+                    android:textColor="#000000"
+                    android:text="Message"/>
                 <RadioGroup
                     android:id="@+id/radioGroup_QA"
-                    android:layout_marginStart="12dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <RadioButton
@@ -56,8 +34,63 @@
                         android:layout_height="wrap_content"
                         android:text="Answer2"/>
                 </RadioGroup>
+                <TextView
+                    android:layout_marginStart="5dp"
+                    android:padding="5dp"
+                    android:id="@+id/message_QAweight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="17dp"
+                    android:textColor="#000000"
+                    android:text="@string/QA_improtant"/>
+                <RadioGroup
+                    android:id="@+id/radioGroup_QAWeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <RadioButton
+                        android:id="@+id/radioButton_QAWeight1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/QA_choice1"/>
+                    <RadioButton
+                        android:id="@+id/radioButton_QAWeight2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/QA_choice2"/>
+                    <RadioButton
+                        android:id="@+id/radioButton_QAWeight3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/QA_choice3"/>
+                    <RadioButton
+                        android:id="@+id/radioButton_QAWeight4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/QA_choice4"/>
+                    <RadioButton
+                        android:id="@+id/radioButton_QAWeight5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/QA_choice5"/>
+                </RadioGroup>
+        <LinearLayout
+            android:padding="3dp"
+            android:gravity="end"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <TextView
+                android:padding="10dp"
+                android:text="@string/dismiss_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:padding="10dp"
+                android:text="@string/ok_QA"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-            </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
 </RelativeLayout>
