--- a/app/src/main/res/layout/question_dialog.xml
+++ b/app/src/main/res/layout/question_dialog.xml
@@ -80,11 +80,13 @@
             android:orientation="horizontal"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/QA_dismiss"
                 android:padding="10dp"
                 android:text="@string/dismiss_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
+                android:id="@+id/QA_confirm"
                 android:padding="10dp"
                 android:text="@string/ok_QA"
                 android:layout_width="wrap_content"
