กายหน้าหีๆๆๆๆๆๆๆๆๆ

--- a/app/src/main/res/layout/item_image_slide.xml
+++ b/app/src/main/res/layout/item_image_slide.xml
@@ -8,6 +8,7 @@
             android:layout_centerInParent="true"
             android:id="@+id/slide_1"
             android:adjustViewBounds="true"
+            android:src="@drawable/tran"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
