--- a/app/src/main/res/layout/activity_switch_page.xml
+++ b/app/src/main/res/layout/activity_switch_page.xml
@@ -27,6 +27,29 @@
         android:orientation="vertical">
 
     </FrameLayout>
+    <LinearLayout
+        android:id="@+id/candyCane"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:background="@color/cpb_white"
+    >
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="190dp"
+            android:src="@drawable/ic_candy_cane"/>
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading..."
+            android:textSize="35dp"
+            android:textColor="@color/text_black_gray"
+            />
+    </LinearLayout>
+
+
 
 
 
