--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -380,15 +380,49 @@
                 android:src="@drawable/ic_chevron_right_black_24dp"/>
         </LinearLayout>
     </LinearLayout>
-        <LinearLayout
-            android:id="@+id/linearLayout22"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@color/c1"
-            android:orientation="vertical"
-            >
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:background="@color/background_gray"
+                />
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout22"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="@color/background_white"
+                android:foreground="?android:selectableItemBackground"
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="6"
+
+                    android:src="@drawable/ic_baseline_feedback_24"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:text="Feedback"
+                    android:layout_weight="1"
+                    android:textColor="@color/defaultContentColor"
+
+                    android:textSize="18dp" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="6"
+                    android:src="@drawable/ic_chevron_right_black_24dp"/>
+            </LinearLayout>
+
 
 
 
