--- a/app/src/main/res/layout-v28/activity_choose_login_registration.xml
+++ b/app/src/main/res/layout-v28/activity_choose_login_registration.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_list"
+
     android:id="@+id/gra"
     tools:context=".ChooseLoginRegistrationActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout18"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="center"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -20,117 +22,142 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginLeft="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
-            android:background="@drawable/myrect"
-            android:text="เข้าสู่ระบบ"
-            android:textColor="@color/text_black_gray" />
+            android:adjustViewBounds="true"
+            android:clickable="false"
 
-        <Button
-            android:id="@+id/button4"
+            android:src="@drawable/ic_candy" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dessert"
+            android:textSize="40dp"
+
+            android:letterSpacing="0.05"
+            android:textColor="@color/text_black_gray"
+            android:layout_marginTop="10dp"
+            />
+        <TextView
+            android:id="@+id/clickToTest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Click to testLogin"
+            android:layout_marginTop="20dp"
+            />
+        <LinearLayout
+            android:id="@+id/testlogin"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="45dp"
-            android:background="@drawable/myrect"
-            android:text="สมัครสมาชิก"
-            android:textColor="@color/text_black_gray" />
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            >
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="20dp"
+                android:paddingRight="30dp"
+                android:paddingLeft="30dp"
+                android:translationZ="4dp"
+                android:background="@drawable/myrect"
+                android:text="เข้าสู่ระบบ"
+
+                android:textColor="@color/text_black_gray" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:paddingRight="30dp"
+                android:paddingLeft="30dp"
+                android:layout_marginLeft="20dp"
+                android:translationZ="4dp"
+                android:background="@drawable/myrect"
+                android:text="สมัครสมาชิก"
+
+                android:textColor="@color/text_black_gray" />
+        </LinearLayout>
 
 
         <LinearLayout
-            android:id="@+id/face"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="45dp"
-            android:background="@drawable/myrect"
-            android:gravity="center"
             android:orientation="horizontal"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            >
+            <View
+                android:layout_width="20dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#80292929"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login with"
+                android:textSize="16dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
 
+                android:textColor="@color/text_black_gray"
+
+                />
+            <View
+                android:layout_width="20dp"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#80292929"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="40dp"
+            >
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:id="@+id/face"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:clickable="false"
                 android:src="@drawable/ic_facebook" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/float_transparent"
-                android:clickable="false"
-                android:text="@string/signin_facebook"
-                android:textColor="@color/text_black_gray" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/google"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="45dp"
-            android:background="@drawable/myrect"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:id="@+id/google"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="40dp"
                 android:clickable="false"
-                android:src="@drawable/ic_search">
-
-            </ImageView>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="false"
-                android:background="@color/float_transparent"
-                android:text="@string/singin_google"
-                android:textColor="@color/text_black_gray" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/button7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="45dp"
-            android:background="@drawable/myrect"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
+                android:src="@drawable/ic_search"/>
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:id="@+id/button7"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:clickable="false"
                 android:src="@drawable/ic_phone" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/float_transparent"
-                android:clickable="false"
-                android:text="@string/signin_phone"
-                android:textColor="@color/text_black_gray" />
-
-
         </LinearLayout>
+
+
+
+
+
 
     </LinearLayout>
 
@@ -158,7 +185,7 @@
             android:layout_height="wrap_content"
             android:text="ไทย"
             android:textSize="16dp"
-            android:textColor="@color/cpb_white"
+            android:textColor="@color/c4"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -167,7 +194,7 @@
             android:textSize="16dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:textColor="@color/cpb_white"
+            android:textColor="@color/text_black_gray"
             />
         <TextView
             android:id="@+id/eng_lang"
@@ -175,7 +202,7 @@
             android:layout_height="wrap_content"
             android:text="English"
             android:textSize="16dp"
-            android:textColor="@color/cpb_white"
+            android:textColor="@color/c4"
             />
 
     </LinearLayout>
