--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,9 @@
         <item name="textAllCaps">false</item>
         <item name="fontFamily">@font/sarabun_regular</item>
     </style>
+    <style name="font" parent="AppTheme">
+        <item name="fontFamily">@font/lemon</item>
+    </style>
     <style name="changfont" parent="AppTheme">
         <item name="fontFamily">@font/k2d_bold</item>
     </style>
