--- a/app/src/main/res/layout-v28/activity_listcard.xml
+++ b/app/src/main/res/layout-v28/activity_listcard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_white"
-    tools:context=".Listcard.ListcardActivity">
+    tools:context=".Listcard.ListCardActivity">
 
 
     <ProgressBar
