จิตกรใหม่กลับมาทำงาน

--- a/app/src/main/res/layout-v28/activity_choose_login_registration.xml
+++ b/app/src/main/res/layout-v28/activity_choose_login_registration.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-
+        android:background="@drawable/a1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -36,16 +36,26 @@
             android:layout_height="wrap_content"
             android:text="Dessert"
             android:textSize="40dp"
-
+            android:shadowColor="#7F000000"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
             android:letterSpacing="0.05"
-            android:textColor="@color/text_black_gray"
+            android:textColor="#FFFFFF"
             android:layout_marginTop="10dp"
+
             />
         <TextView
             android:id="@+id/clickToTest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Click to testLogin"
+            android:shadowColor="#7F000000"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
+            android:textColor="#FFFFFF"
+            android:textSize="18dp"
             android:layout_marginTop="20dp"
             />
         <LinearLayout
@@ -103,24 +113,27 @@
                 android:layout_width="20dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
-                android:background="#80292929"
+                android:background="#80FFFFFF"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Login with"
-                android:textSize="16dp"
+                android:textSize="18dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-
-                android:textColor="@color/text_black_gray"
+                android:shadowColor="#7F000000"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="2"
+                android:textColor="#FFFFFF"
 
                 />
             <View
                 android:layout_width="20dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
-                android:background="#80292929"
+                android:background="#80FFFFFF"
                 />
         </LinearLayout>
 
