--- a/app/src/main/res/layout-v28/activity_phone.xml
+++ b/app/src/main/res/layout-v28/activity_phone.xml
@@ -25,8 +25,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/background_white"
             android:theme="@style/AppTheme2"
-            app:subtitleTextColor="@color/c2"
-            app:titleTextColor="@color/c2">
+            app:titleTextColor="@color/c3">
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -113,14 +112,10 @@
         <Button
             android:id="@+id/button10"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/roundlike"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:text="@string/next_button"
-            android:textColor="@color/cpb_white"
             android:textSize="16dp" />
     </LinearLayout>
 
