--- a/app/src/main/res/layout-v28/activity_regis_age.xml
+++ b/app/src/main/res/layout-v28/activity_regis_age.xml
@@ -27,7 +27,7 @@
             android:background="@color/background_white"
             android:theme="@style/AppTheme2"
             app:subtitleTextColor="@color/c2"
-            app:titleTextColor="@color/c2">
+            app:titleTextColor="@color/c4">
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -77,22 +77,16 @@
             android:textColor="@color/text_gray"
             android:textSize="14dp" />
 
-
         <Button
-            android:id="@+id/button11"
+            android:id="@+id/button_name"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="60dp"
-            android:background="@drawable/roundlike"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:layout_marginTop="20dp"
             android:text="@string/next_button"
             android:textColor="@color/cpb_white"
-            android:textSize="16dp"
-            />
+            android:textSize="16dp" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
