--- a/app/src/main/res/layout-v28/activity_regis_name_.xml
+++ b/app/src/main/res/layout-v28/activity_regis_name_.xml
@@ -27,8 +27,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/background_white"
             android:theme="@style/AppTheme2"
-            app:subtitleTextColor="@color/c2"
-            app:titleTextColor="@color/c2">
+            app:titleTextColor="@color/c4">
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -96,12 +95,9 @@
         <Button
             android:id="@+id/button_name"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/roundlike"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:layout_marginTop="20dp"
             android:text="@string/next_button"
             android:textColor="@color/cpb_white"
             android:textSize="16dp" />
