--- a/app/src/main/res/layout/activity_verify_.xml
+++ b/app/src/main/res/layout/activity_verify_.xml
@@ -97,26 +97,14 @@
         <Button
             android:id="@+id/button8"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="40dp"
-            android:background="@drawable/roundlike"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:text="@string/next_button"
             android:textColor="@color/cpb_white"
             android:textSize="16dp" />
 
+
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout19" />
 </androidx.constraintlayout.widget.ConstraintLayout>
