--- a/app/src/main/res/layout/money.xml
+++ b/app/src/main/res/layout/money.xml
@@ -45,13 +45,11 @@
             android:id="@+id/buy"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:text="฿50.00 / เดือน"
             android:layout_gravity="center"
             android:textColor="@color/cpb_white"
-            android:background="@drawable/roundlike"
+
             />
     </LinearLayout>
