--- a/app/src/main/res/layout/sayhi_dialog.xml
+++ b/app/src/main/res/layout/sayhi_dialog.xml
@@ -46,18 +46,15 @@
         android:textSize="16dp"
         />
     <Button
-
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="4dp"
         android:id="@+id/buy"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:text="@string/send_message"
         android:layout_gravity="center"
         android:textColor="@color/cpb_white"
-        android:background="@drawable/roundlike"
+
         />
 </LinearLayout>
 </androidx.cardview.widget.CardView>
