--- a/app/src/main/res/layout/vip_dialog.xml
+++ b/app/src/main/res/layout/vip_dialog.xml
@@ -78,26 +78,22 @@
                         >
                         <Button
                             android:layout_marginBottom="10dp"
-                            android:paddingRight="20dp"
-                            android:paddingLeft="20dp"
                             android:id="@+id/admob"
                             android:layout_width="wrap_content"
-                            android:layout_height="40dp"
+                            android:layout_height="wrap_content"
                             android:text="กำลังโหลดโฆษณา"
                             android:textColor="@color/text_black_gray"
-                            android:background="@drawable/roundlike4"
+                            android:backgroundTint="@color/white"
                             />
 
                         <Button
                             android:layout_marginBottom="5dp"
-                            android:paddingRight="20dp"
-                            android:paddingLeft="20dp"
                             android:id="@+id/buy"
                             android:layout_width="wrap_content"
-                            android:layout_height="40dp"
+                            android:layout_height="wrap_content"
                             android:text="฿100.00 / เดือน"
                             android:textColor="@color/text_black_gray"
-                            android:background="@drawable/roundlike4"
+                            android:backgroundTint="@color/white"
                             />
 
                 </LinearLayout>
