--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="text_black_gray">#292929</color>
     <color name="background_gray">#F1F1F1</color>
     <color name="background_white">#FFFDFA</color>
-    <color name="pink">#FFCA28</color>
+    <color name="pink">#FFD54F</color>
     <color name="white_tran">#80FFFFFF</color>
     <color name="red">#FF004E</color>
     <color name="white">#FFFFFF</color>
