--- a/app/src/main/res/layout/sayhi_dialog.xml
+++ b/app/src/main/res/layout/sayhi_dialog.xml
@@ -23,13 +23,14 @@
     android:padding="20dp"
     >
     <ImageView
+        android:visibility="gone"
         android:id="@+id/image_vip"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_hand"
         />
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,13 +42,16 @@
         android:id="@+id/text_send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:hint="@string/Send_a_message_to"
+
         android:textColor="@color/text_black_gray"
         android:textSize="16dp"
+        android:includeFontPadding="false"
         />
     <Button
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
