--- a/app/src/main/res/layout/item_image_slide.xml
+++ b/app/src/main/res/layout/item_image_slide.xml
@@ -9,6 +9,7 @@
             android:id="@+id/slide_1"
             android:adjustViewBounds="true"
             android:src="@drawable/tran"
+            android:transitionName="ProfileTransition"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
