--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -33,6 +33,7 @@
                 android:layout_height="65dp"
                 android:layout_centerInParent="true"
                 app:civ_border_color="#11000000"
+                android:transitionName="ProfileTransition"
                 app:civ_border_width="2dp" />
 
             <LinearLayout
