--- a/app/src/main/res/layout/activity_switch_page.xml
+++ b/app/src/main/res/layout/activity_switch_page.xml
@@ -35,16 +35,21 @@
         android:orientation="vertical"
         android:background="@color/cpb_white"
     >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
         <ImageView
-            android:layout_width="180dp"
-            android:layout_height="190dp"
+            android:visibility="gone"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/ic_candy_cane"/>
         <TextView
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Loading..."
-            android:textSize="35dp"
+            android:textSize="18dp"
             android:textColor="@color/text_black_gray"
             />
     </LinearLayout>
