--- a/app/src/main/res/layout-v28/activity_phone.xml
+++ b/app/src/main/res/layout-v28/activity_phone.xml
@@ -19,15 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/my_tools"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/background_white"
-            android:theme="@style/AppTheme2"
-            app:titleTextColor="@color/c3">
-
-        </androidx.appcompat.widget.Toolbar>
+        <include layout="@layout/toolsbar" />
 
         <ProgressBar
             android:id="@+id/progressBar2"
