--- a/app/src/main/res/layout-v28/activity_regis_name_.xml
+++ b/app/src/main/res/layout-v28/activity_regis_name_.xml
@@ -21,15 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/my_tools"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/background_white"
-            android:theme="@style/AppTheme2"
-            app:titleTextColor="@color/c4">
-
-        </androidx.appcompat.widget.Toolbar>
+        <include layout="@layout/toolsbar" />
 
         <ProgressBar
             android:id="@+id/progressBar2"
@@ -82,8 +74,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
+            android:maxLength="30"
             android:background="@drawable/input_field"
-            android:ems="10"
             android:hint="@string/hint_name"
             android:inputType="textPersonName"
             android:paddingLeft="20dp"
