--- a/app/src/main/res/layout-v28/activity_regis_target__acivity.xml
+++ b/app/src/main/res/layout-v28/activity_regis_target__acivity.xml
@@ -19,16 +19,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/my_tools"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/background_white"
-            android:theme="@style/AppTheme2"
-            app:subtitleTextColor="@color/c2"
-            app:titleTextColor="@color/c4">
+        <include layout="@layout/toolsbar" />
 
-        </androidx.appcompat.widget.Toolbar>
 
         <ProgressBar
             android:id="@+id/progressBar2"
@@ -124,10 +116,10 @@
         android:id="@+id/skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="ข้าม >"
-        android:textColor="#DFDFDF"
+        android:textColor="#B8B8B8"
         android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
