--- a/app/src/main/res/layout/sayhi_dialog.xml
+++ b/app/src/main/res/layout/sayhi_dialog.xml
@@ -21,45 +21,34 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="24dp"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp"
+    android:paddingTop="60dp"
+    android:paddingBottom="60dp"
     >
-    <ImageView
-        android:visibility="gone"
-        android:id="@+id/image_vip"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_hand"
-        />
+
     <TextView
-        android:layout_marginTop="16dp"
+
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_hi"
-        android:textColor="@color/text_black_gray"
-        android:textSize="20dp"
+        android:textColor="@color/c3"
+        android:textSize="30dp"
         />
-    <EditText
-        android:visibility="gone"
-        android:id="@+id/text_send"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:hint="@string/Send_a_message_to"
 
-        android:textColor="@color/text_black_gray"
-        android:textSize="16dp"
-        android:includeFontPadding="false"
-        />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/outlinedTextField"
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:hint="@string/Send_a_message_to"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/text_send"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -68,7 +57,6 @@
     </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:id="@+id/buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
