--- a/app/src/main/res/layout-v28/activity_setting2.xml
+++ b/app/src/main/res/layout-v28/activity_setting2.xml
@@ -11,6 +11,8 @@
     <include layout="@layout/toolsbar" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/settingPage"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:paddingRight="10dp"
         android:paddingLeft="10dp"
