Add QuestionActivity.kt , QAActivityAdapter.kt to project and modified some registerActivity

--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -15,7 +15,7 @@
         android:max="6"
         android:progress="5"
         android:progressTint="@color/c3" />
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPagerQuestion"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
