--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -1,15 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:padding="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
-    <Button
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/cancel_match_confirm"
-        android:id="@+id/registerQABtn"
+    android:layout_gravity="center">
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/linear_buttonQA"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/questionQARegister"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autoSizeMaxTextSize="18sp"
+            android:text="Message"/>
+        <RadioGroup
+            android:background="@color/background_gray"
+            android:id="@+id/radioGroupRegisterQA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <RadioButton
+                android:layout_marginBottom="2dp"
+                android:background="@color/white"
+                android:id="@+id/radioButtonRegisterQA1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_1"/>
+            <RadioButton
+                android:background="@color/white"
+                android:id="@+id/radioButtonRegisterQA2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_2"/>
+            <RadioButton
+                android:visibility="gone"
+                android:id="@+id/radioButtonRegisterQA3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_3"/>
+            <RadioButton
+                android:visibility="gone"
+                android:id="@+id/radioButtonRegisterQA4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_4"/>
+        </RadioGroup>
+        <TextView
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="MessageWeight"/>
+        <RadioGroup
+            android:background="@color/background_gray"
+            android:id="@+id/radioGroupRegisterQAAns"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <RadioButton
+                android:layout_marginBottom="2dp"
+                android:background="@color/white"
+                android:id="@+id/radioButtonRegisterQAAns1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_1"/>
+            <RadioButton
+                android:layout_marginBottom="2dp"
+                android:background="@color/white"
+                android:id="@+id/radioButtonRegisterQAAns2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_2"/>
+            <RadioButton
+                android:layout_marginBottom="2dp"
+                android:background="@color/white"
+                android:id="@+id/radioButtonRegisterQAAns3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_3"/>
+            <RadioButton
+                android:background="@color/white"
+                android:id="@+id/radioButtonRegisterQAAns4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="label_4"/>
+        </RadioGroup>
+        <TextView
+            android:id="@+id/countRegisterQA"
+            android:layout_margin="10dp"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:text="0/0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/linear_buttonQA"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/registerQABtnCancel"
+            android:layout_marginEnd="10dp"
+            android:text="@string/cancle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:text="@string/next_QA"
+            android:id="@+id/registerQABtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </RelativeLayout>
